# ohloud

./: .dockerignore  .gitignore  .npmrc  CONTRIBUTING.md  Dockerfile  README.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
.claude/: launch.json
.github/: dependabot.yml
.github/rulesets/: protect-main.json  protect-release-tags.json
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
app/: app.vue
app/assets/css/: main.css
app/components/: AppIcon.vue  GameBackground.vue  InstallModal.vue  PassphraseModal.vue  PillTabs.vue  ReceivePanel.vue  SendPanel.vue  TeddyBear.vue  Typewriter.vue
app/composables/: useCodec.ts  useConfetti.ts  usePwaInstall.ts  useXylophone.ts
app/core/: bytes.test.ts  bytes.ts  constants.ts  errors.ts  index.ts  ohloud.test.ts  ohloud.ts  property.test.ts  security.test.ts
app/core/audio/: capture.ts  level.test.ts  level.ts  permissions.ts  playback.ts  unwedge.ts
app/core/container/: compress.ts  container.test.ts  header.ts  (+5 more)
app/pages/: index.vue
app/plugins/: pwa-install.client.ts  service-worker.client.ts  tauri.client.ts
app/utils/: trpc.ts
app/workers/: codec.worker.ts
bench/: analyze-capture.ts  channel.test.ts  channel.ts  e2e.test.ts  envelope.test.ts  modem.ts  run.ts
docker/: nginx.conf
electron/: main.ts  preload.ts  vite.config.ts
public/licenses/: fonts.txt
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+38 files in other folders)
